log/build_2022-07-25_23-00-06/robot_services/stderr.log
/home/legacy/.local/lib/python3.8/site-packages/setuptools/dist.py:772: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
/home/legacy/.local/lib/python3.8/site-packages/setuptools/dist.py:772: UserWarning: Usage of dash-separated 'install-scripts' will not be supported in future versions. Please use the underscore name 'install_scripts' instead
  warnings.warn(
/home/legacy/.local/lib/python3.8/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/legacy/Mechatronics Projects/big_arm_ws/install/robot_services/lib/python3.8/site-packages/robot_services/get_joint_states.py", line 41
    self.get_logger().info('Incoming request from a client, responded: ' {response})
                                                                         ^
SyntaxError: invalid syntax

